thank you page alignment fixed

--- a/css/index.css
+++ b/css/index.css
@@ -599,6 +599,10 @@ section {
   max-width: 80px;
 }
 
+.thank-you-page {
+  height: 90%;
+}
+
 .thank-you-page,
 .wrapper {
   display: flex;
