--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -420,6 +420,10 @@ form {
   max-width: 80px;
 }
 
+.thank-you-page {
+  height: 90%;
+}
+
 .thank-you-page,
 .wrapper {
   display: flex;
